--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Go Green</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.scss">
 </head>
 <body>
-    
+    <header class="hero">
+        <div class="container">
+            <img class="hero__logo" src="./images/go-green-logo.png" alt="Go Green">
+            <p class="hero__text">
+                Um dos maiores eventos de tecnologia sustentável no mundo
+            </p>
+        </div>
+    </header>
+
+    <script src="scripts/main.js"></script>
 </body>
 </html>
