--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Go Green</title>
+    <title>Aniversário</title>
+    <link rel="icon" type="image/png" href="./images/icon-penguin.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -13,9 +14,9 @@
 <body>
     <header class="hero">
         <div class="container">
-            <img class="hero__logo" src="./images/go-green-logo.png" alt="Go Green">
+            <img class="hero__logo" src="./images/happy-birthday-logo.png" alt="Go Green">
             <p class="hero__text">
-                Um dos maiores eventos de tecnologia sustentável no mundo vai começar! </br>
+                Meu aniversário está chegando e vamos comemorar com muito estilo </br></br>
                 <span id="contador"></span>
             </p>
             <div class="infos-bar">
@@ -34,7 +35,7 @@
                     </li>
                 </ul>
                 <a href="#" class="button button--primary">
-                    Garanta sua vaga
+                    Confirmar presença
                 </a>
             </div>
         </div>
@@ -44,68 +45,68 @@
     <section class="event event--carregador">
         <div class="container" data-aos="zoom-in">
             <div class="event__details">
-                <h2 class="event__details__title">Carregador Solar</h2>
+                <h2 class="event__details__title">Você está convidado!</h2>
                 <p class="event__details__desciption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At, distinctio officia esse, omnis blanditiis suscipit recusandae laudantium voluptatem tempore corrupti sunt sapiente commodi! Reprehenderit sunt nobis quae exercitationem repellendus laudantium?
                 </p>
             </div>
-            <img class="event__image" src="./images/event-phone-solar.png" alt="Telefone Solar">
+            <img class="event__image" src="./images/event-convite.png" alt="Convite">
         </div>
     </section>
     <section class="event event--tower-park event--image-left">
         <div class="container" data-aos="zoom-in">
             <div class="event__details">
-                <h2 class="event__details__title">Tower Park</h2>
+                <h2 class="event__details__title">Sua presença é o presente</h2>
                 <p class="event__details__desciption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At, distinctio officia esse, omnis blanditiis suscipit recusandae laudantium voluptatem tempore corrupti sunt sapiente commodi! Reprehenderit sunt nobis quae exercitationem repellendus laudantium?
                 </p>
                 <div class="animation"></div>
             </div>
-            <img class="event__image" src="./images/event-tower-park.jpg" alt="Tower Park">
+            <img class="event__image" src="./images/event-gift.png" alt="Presente">
         </div>
     </section>
     <section class="event event--placas-fotov">
         <div class="container" data-aos="zoom-in">
             <div class="event__details">
-                <h2 class="event__details__title">Placas Fotovoltaicas</h2>
+                <h2 class="event__details__title">Coquitéis e Drinks</h2>
                 <p class="event__details__desciption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At, distinctio officia esse, omnis blanditiis suscipit recusandae laudantium voluptatem tempore corrupti sunt sapiente commodi! Reprehenderit sunt nobis quae exercitationem repellendus laudantium?
                 </p>
             </div>
-            <img class="event__image" src="./images/event-photovoltaic.jpg" alt="Placas Fotovoltaicas">
+            <img class="event__image" src="./images/event-drinks.png" alt="Drinks">
         </div>
     </section>
     <section class="event event--drones event--image-left">
         <div class="container" data-aos="fade-left">
             <div class="event__details">
-                <h2 class="event__details__title">Drones</h2>
+                <h2 class="event__details__title">Espetos variados</h2>
                 <p class="event__details__desciption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At, distinctio officia esse, omnis blanditiis suscipit recusandae laudantium voluptatem tempore corrupti sunt sapiente commodi! Reprehenderit sunt nobis quae exercitationem repellendus laudantium?
                 </p>
             </div>
-            <img class="event__image" src="./images/event-drones.jpg" alt="Zangão">
+            <img class="event__image" src="./images/event-food.png" alt="Espetos">
         </div>
     </section>
     <section class="event event--inova">
         <div class="container" data-aos="fade-right">
             <div class="event__details">
-                <h2 class="event__details__title">Inovações</h2>
+                <h2 class="event__details__title">Confirme sua presença</h2>
                 <p class="event__details__desciption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At, distinctio officia esse, omnis blanditiis suscipit recusandae laudantium voluptatem tempore corrupti sunt sapiente commodi! Reprehenderit sunt nobis quae exercitationem repellendus laudantium?
                 </p>
             </div>
-            <img class="event__image" src="./images/event-details-city-1280x853.jpg" alt="Green City">
+            <img class="event__image" src="./images/event-date.png" alt="Calendário">
         </div>
     </section>
     <section class="event event--recursos event--image-left">
         <div class="container" data-aos="fade-up">
             <div class="event__details">
-                <h2 class="event__details__title">Nossos recursos</h2>
+                <h2 class="event__details__title">Espero por vocês!!</h2>
                 <p class="event__details__desciption">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. At, distinctio officia esse, omnis blanditiis suscipit recusandae laudantium voluptatem tempore corrupti sunt sapiente commodi! Reprehenderit sunt nobis quae exercitationem repellendus laudantium?
                 </p>
             </div>
-            <img class="event__image" src="./images/event-det-desc-icons.png" alt="Recursos">
+            <img class="event__image" src="./images/event-heart.png" alt="coração">
         </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
